<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_prompt">Enter a search string</string>
    <string name="search_label">Search</string>
    <string name="content_image_result">Image Result</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="image_size_label">Image Size</string>
    <string name="image_color_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_flter_label">Site Filter</string>
    <string name="site_name_hint">Enter website url</string>
    <string name="full_image_label">Full Image</string>
    <string name="title_activity_search_filter">SearchFilterActivity</string>
    <string name="title_activity_search_filter_fragment">SearchFilterFragmentActivity</string>

</resources>
